--- a/DontLaugh/FirstPage.html
+++ b/DontLaugh/FirstPage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Going to Be a Profile</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <h1><strong>Playing with Jquery</strong></h1>
+    <h1><strong>A work in Progress</strong></h1>
     <figure><img src="C:\Users\dself\OneDrive\Pictures\meThumbnail.jpg" alt="me"></figure>
     <h2>
     <ul>
